# Templates

./: .gitattributes  .gitignore  LICENSE  README.md
cicd/gitlab/: build-image.gitlab-ci.yml
containers/languages/rust/: Dockerfile.prod.static.app  Dockerfile.prod.static.http_srv
home/: .bash_aliases  .bash_envvars  .bashrc  .tmux.conf
home/.bashrc_utils/: .bash_envvars.sh  .unbuntu.sh
home/.config/nvim/: .gitignore
home/.config/nvim/lua/baptiste/: init.lua  lsp.lua  plugins.lua  remap.lua  set.lua  vscode.lua
languages/rust/: Cargo.toml
languages/rust/base/: Cargo.toml
languages/rust/base/src/: config.rs  main.rs
languages/rust/src/: config.rs  program.rs
languages/rust/web_crud_api_axum/: Cargo.toml
languages/rust/web_crud_api_axum/src/: config.rs  errors.rs  implementation.rs  main.rs  program.rs  routes.rs
languages/rust/web_crud_api_warp/: Cargo.toml  Dockerfile
languages/rust/web_crud_api_warp/src/: implementation.rs  main.rs  models.rs  program.rs  routes.rs
setup/: constants.sh  setup.sh  utils.sh
setup/installers/: cmake.sh  gcc.sh  mysql.sh  python.sh
vscodium/: extentions  install_extensions.sh  keybindings.json  settings.json  setup_configs.json  setup_configs.sh  setup_settings.sh
