[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
thiserror = "1"
clippy = "0"
env_logger = "0"
parking_lot = { version = "0.12", features = ["serde", "arc_lock", "deadlock_detection"] }
serde_json = "1"
tokio = { version = "1.28", features = ["rt", "macros", "full"] }
utoipa = "4"
uuid = { version = "1.3", features = ["fast-rng", "serde", "v4"] }
axum = "0"

