# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Baptiste Roseau"]

[[bin]]
name = "application"
path = "src/main.rs"

[[bin]]
name = "health_checker"
path = "health_checker/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
clippy = "0"
env_logger = "0.11"
log = "0.4"
parking_lot = { version = "0.12", features = ["serde", "arc_lock", "deadlock_detection"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt", "macros", "full"] }
uuid = { version = "1.3", features = ["fast-rng", "serde", "v4"] }
warp = { version = "0.3", features = ["tls"] }
minreq = { version = "2.8", features = ["https"]}
